Satellite data integration #3